--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Ahmad Sachowi
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Full Stack Developer from Indonesia
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars.githubusercontent.com/u/163519970?v=4
 
 #
 # Flags below are optional
